--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>
               Write a function <span class="text-highlight">countDataTypes</span> that takes an array as input and returns an object detailing the count of each data type present in the array. Only include data types that are present in the array in the output object.
             </p>
-            <p>
+            <p class="mt-4">
               The array is: <br>
               const inputArray = [1, 'hello', true, 2, 'world', null, undefined, {a: 1}, 'JavaScript'];
             </p>
